--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>e commerce</title>
   </head>
   <body style="background: #F9F9F9;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
