--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AewIQCl5516CCW6f6VtXxRY5cyKBgwfB9wk3Uo3IRNkc_DMaE7mJFBuMTHWuLhqQhmBAaiizWsRfQkp6"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
